# mpc-bip32-demo

./: Cargo.toml  README.md  key_shares.json  leanring_note.txt  pregenerated_primes.json  sample_out.txt  verify_bip32.py
src/: main.rs
