[package]
name = "lockness-hd-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
cggmp24 = { version = "0.7.0-alpha.3", features = ["hd-wallet", "curve-secp256k1", "spof"] }
round-based = { version = "0.4", features = ["state-machine"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoin = "0.32"
sha3 = "0.10"
hmac = "0.12"
ethers = { version = "2.0", features = ["legacy"] }